--- a/core/static/css/home.css
+++ b/core/static/css/home.css
@@ -36,56 +36,52 @@
     display: flex;
     flex-direction: column;
 
-    padding: var(--panel-padding);
-
     box-sizing: border-box;
 }
-.widget-container-label{
-    margin-bottom: 20px;
-    padding-left: 10px;
-
-    font-family: Roboto-Medium;
-    font-size: 28px;
-    color: white;
-
-    border-left: 4px solid var(--dark-green);
-}
 .widget-list{
-    --rows: 2;
-    --columns: 3;
-
     width: 100%;
     height: 100%;
 
     display: flex;
+    flex-direction: column;
     flex: 1;
 }
-.widget-list.grid{
-    display: grid;
-    grid-template-columns: repeat(var(--columns), 1fr);
-    grid-template-rows: repeat(var(--rows), 1fr);
-    grid-gap: var(--panel-padding);
+.widget-list-label{
+    margin-bottom: 10px;
+    margin-left: 10px;
+
+    font-family: Roboto-Medium;
+    font-size: 24px;
+    color: white;
+}
+.widget-list.main{
+    margin-bottom: var(--panel-padding);
+}
+.widget-list:not(:first-child){
+    margin-top: var(--panel-padding);
 }
 .widget{
     --size: 300px;
     --background-color: var(--medium-black);
 
     width: var(--size);
+    height: var(--size);
 
     display: flex;
     align-items: flex-start;
-    justify-content: flex-end;
     flex-direction: column;
 
     position: relative;
 
-    background-color: var(--background-color);
+    padding: var(--panel-padding);
+
+    background-color: var(--medium-black);
     background-image: var(--background-image);
     background-size: cover;
-    background-position: 50% calc(50% - 0px);
+    background-position: center;
     background-repeat: no-repeat;
-    background-origin: border-box;
-    background-clip: content-box, border-box;
+
+    color: white;
 
     border-radius: 20px;
 
@@ -95,31 +91,26 @@
 
     cursor: pointer;
 }
+.widget.green{
+    --background-color: var(--dark-green);
+}
+.widget.link{
+    justify-content: flex-end;
+
+    padding: 0;
+
+    background-color: var(--background-color);
+}
 .widget:hover .widget-name{
     text-decoration: underline;
 }
-.widget-list.grid .widget{
-    width: unset;
-    height: unset;
-}
 .widget-list .widget:not(:first-child){
     margin-left: var(--panel-padding);
-}
-.widget-list.grid .widget:not(:first-child){
-    margin-left: 0;
 }
 .widget.no-padding{
     padding: 0;
 }
 
-.widget-image-container{
-    width: var(--size);
-    height: var(--size);
-}
-.widget-list.grid.small .widget-image{
-    width: 40px;
-    height: 40px;
-}
 .widget-info{
     width: 100%;
 
@@ -158,4 +149,69 @@
 }
 .widget-list.small .widget-name{
     font-size: 18px;
+}
+
+.widget-button-list{
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+}
+.widget-button{
+    --background-color: var(--dark-green);
+
+    padding: 10px;
+
+    background-color: var(--background-color);
+
+    border-radius: 100%;
+
+    box-sizing: border-box;
+}
+.widget-button:not(:first-child){
+    margin-left: 10px;
+}
+.widget-button img{
+    height: 32px;
+}
+
+#widget-user-info .user-icon{
+    height: 60px;
+}
+#widget-user-cover{
+    width: 100%;
+    height: 100px;
+
+    position: relative;
+
+    background-color: var(--background-color);
+}
+#widget-user-cover .profile-picture-container{
+    position: absolute;
+    top: calc(100% - var(--height) / 2);
+    left: calc(50% - var(--width) / 2);
+
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+}
+#widget-user-details{
+    width: 100%;
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    margin-top: 55px;
+}
+#widget-user-name{
+    font-family: Roboto-Medium;
+    font-size: 28px;
+}
+.user-username-container{
+    font-size: 10px;
+    color: #bbb;
+}
+.user-username{
+    margin-left: 1px;
+
+    font-size: 12px;
 }
