--- a/core/static/css/subpanel.css
+++ b/core/static/css/subpanel.css
@@ -121,7 +121,7 @@
 	
 	box-sizing: border-box;
 	
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 .playlist-song{
 	width: 100%;
@@ -176,6 +176,8 @@
 	height: 20px;
 	
 	margin-right: 10px;
+
+	border-radius: 6px;
 }
 .song-length{
 	justify-content: flex-end;
@@ -217,10 +219,10 @@
 	margin-top: 10px;
 }
 
-#playlist-songs::-webkit-scrollbar, #user-list::-webkit-scrollbar { width: 8px; height: 3px; }
-#playlist-songs::-webkit-scrollbar-track, #user-list::-webkit-scrollbar-track {  background-color: transparent; }
-#playlist-songs::-webkit-scrollbar-track-piece, #user-list::-webkit-scrollbar-track-piece { background-color: transparent; }
-#playlist-songs::-webkit-scrollbar-thumb, #user-list::-webkit-scrollbar-thumb { height: 50px; background-color: #666; border-radius: 3px; }
-#playlist-songs::-webkit-scrollbar-corner, #user-list::-webkit-scrollbar-corner { background-color: #646464; }
-#playlist-songs::-webkit-resizer, #user-list::-webkit-resizer { background-color: #666; }
-#playlist-songs::-webkit-scrollbar-button, #user-list::-webkit-scrollbar-button { display: none; }*/
+::-webkit-scrollbar, #user-list::-webkit-scrollbar { width: 8px; height: 3px; }
+::-webkit-scrollbar-track, #user-list::-webkit-scrollbar-track {  background-color: transparent; }
+::-webkit-scrollbar-track-piece, #user-list::-webkit-scrollbar-track-piece { background-color: transparent; }
+::-webkit-scrollbar-thumb, #user-list::-webkit-scrollbar-thumb { height: 50px; background-color: #666; border-radius: 3px; }
+::-webkit-scrollbar-corner, #user-list::-webkit-scrollbar-corner { background-color: #646464; }
+::-webkit-resizer, #user-list::-webkit-resizer { background-color: #666; }
+::-webkit-scrollbar-button, #user-list::-webkit-scrollbar-button { display: none; }
